заменила картинку карточки экскурсии и добавила фото в карусель галереи

--- a/categoryPage.html
+++ b/categoryPage.html
@@ -100,7 +100,11 @@
           <h3 class="hidden-section">section excurtions</h3>
 
           <div class="item-cart">
-            <img src="./img/sobor.jpg" class="item-img" alt="item-img" />
+            <img
+              src="./img/item-primary-school-science4.jpeg"
+              class="item-img"
+              alt="item-img"
+            />
             <div class="item-cart-desc">
               <p class="item-age">1-4 классы</p>
               <p class="item-time">~ 90 мин</p>
@@ -176,35 +180,41 @@
                       <li class="item-desc-line">
                         Дмитрий Донской и куликовская битва. Сергий Радонежский.
                       </li>
-                      <li class="item-desc-line">Стена Китай города, прогулка по стене.</li>
+                      <li class="item-desc-line">
+                        Стена Китай города, прогулка по стене.
+                      </li>
                       <li class="item-desc-line">
                         Разговор в Зарядье об Иване Третьем и присоединения
                         земель на примере Псковской горки. Поговорим о гербе
                         Москвы и России.
                       </li>
                       <li class="item-desc-line">Палаты бояр Романовых</li>
-                      <li class="item-desc-line">Старый Английский двор (Иван Грозный)</li>
+                      <li class="item-desc-line">
+                        Старый Английский двор (Иван Грозный)
+                      </li>
                     </ol>
                   </li>
                   <li class="item-desc-list">
-                  <h6 class="item-desc-list-title">Красная площадь</h6>  
+                    <h6 class="item-desc-list-title">Красная площадь</h6>
                     <ol class="item-desc-sublist">
                       <li class="item-desc-line">
                         Храм Покрова Богородиться, что на рву и присоединения
                         Казани при Иване Грозном.
-                      </li class="item-desc-line">
+                      </li>
                       <li class="item-desc-line">Спасская башня</li>
                       <li class="item-desc-line">Никольская башня</li>
                     </ol>
                   </li>
                   <li class="item-desc-list">
-                   <h6 class="item-desc-list-title">Улица Никольская</h6> 
+                    <h6 class="item-desc-list-title">Улица Никольская</h6>
                     <ol class="item-desc-sublist">
                       <li class="item-desc-line">
                         Заиконоспасский монастырь и Ломаносов (греко латинская
                         академия)
                       </li>
-                      <li class="item-desc-line">Первый печатный дров и первая книга</li>
+                      <li class="item-desc-line">
+                        Первый печатный дров и первая книга
+                      </li>
                       <li class="item-desc-line">
                         Памятник Ивану Федорову (первопечатнику) и раскопки
                         храма.
@@ -212,7 +222,9 @@
                     </ol>
                   </li>
                 </ul>
+
                 <p class="item-text"></p>
+
                 <div class="item-desc-basic-info">
                   <ul class="basic-info">
                     <li class="basic-info-list">
@@ -275,56 +287,73 @@
                   </ul>
                 </div>
               </section>
-              <section class="item-gallery container">
+
+              <section class="gallery">
                 <h3 class="hidden-section">section excurtions gallery</h3>
+                <div class="gallery-container">
+                  <h2 class="gallery-title">Галерея</h2>
 
-                <h2 class="item-gallery-title">Галерея</h2>
-
-                <div
-                  id="carouselExampleAutoplaying"
-                  class="carousel slide"
-                  data-bs-ride="carousel"
-                >
-                  <div class="carousel-inner">
-                    <div class="carousel-item active">
-                      <img src="..." class="d-block w-100" alt="..." />
+                  <div
+                    id="carouselExampleAutoplaying"
+                    class="carousel slide"
+                    data-bs-ride="carousel"
+                  >
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img
+                          src="./img/item-primary-school-science1.jpeg"
+                          class="d-block w-100"
+                          alt="primary-school-science"
+                        />
+                      </div>
+                      <div class="carousel-item">
+                        <img
+                          src="./img/item-primary-school-science2.jpeg"
+                          class="d-block w-100"
+                          alt="primary-school-science"
+                        />
+                      </div>
+                      <div class="carousel-item">
+                        <img
+                          src="./img/item-primary-school-science3.jpeg"
+                          class="d-block w-100"
+                          alt="primary-school-science"
+                        />
+                      </div>
                     </div>
-                    <div class="carousel-item">
-                      <img src="..." class="d-block w-100" alt="..." />
-                    </div>
-                    <div class="carousel-item">
-                      <img src="..." class="d-block w-100" alt="..." />
-                    </div>
+                    <button
+                      class="carousel-control-prev"
+                      type="button"
+                      data-bs-target="#carouselExampleAutoplaying"
+                      data-bs-slide="prev"
+                    >
+                      <span
+                        class="carousel-control-prev-icon"
+                        aria-hidden="true"
+                      ></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button
+                      class="carousel-control-next"
+                      type="button"
+                      data-bs-target="#carouselExampleAutoplaying"
+                      data-bs-slide="next"
+                    >
+                      <span
+                        class="carousel-control-next-icon"
+                        aria-hidden="true"
+                      ></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
                   </div>
-                  <button
-                    class="carousel-control-prev"
-                    type="button"
-                    data-bs-target="#carouselExampleAutoplaying"
-                    data-bs-slide="prev"
-                  >
-                    <span
-                      class="carousel-control-prev-icon"
-                      aria-hidden="true"
-                    ></span>
-                    <span class="visually-hidden">Previous</span>
-                  </button>
-                  <button
-                    class="carousel-control-next"
-                    type="button"
-                    data-bs-target="#carouselExampleAutoplaying"
-                    data-bs-slide="next"
-                  >
-                    <span
-                      class="carousel-control-next-icon"
-                      aria-hidden="true"
-                    ></span>
-                    <span class="visually-hidden">Next</span>
-                  </button>
                 </div>
               </section>
+
               <section class="reviews container">
                 <h3 class="hidden-section">section excurtions reviews</h3>
-                Отзывы
+                
+<div class="reviews-container">
+                  <h2 class="reviews-title">Отзывы</h2>
 
                 <div
                   id="carouselExampleAutoplaying"
