--- a/categoryPage.html
+++ b/categoryPage.html
@@ -349,52 +349,119 @@
                 </div>
               </section>
 
-              <section class="reviews container">
+              <section class="reviews">
                 <h3 class="hidden-section">section excurtions reviews</h3>
-                
-<div class="reviews-container">
+
+                <div class="reviews-container">
                   <h2 class="reviews-title">Отзывы</h2>
 
-                <div
-                  id="carouselExampleAutoplaying"
-                  class="carousel slide"
-                  data-bs-ride="carousel"
-                >
-                  <div class="carousel-inner">
-                    <div class="carousel-item active">
-                      <img src="..." class="d-block w-100" alt="..." />
+                  <div id="carouselExample" class="carousel slide">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <div class="card review-cart">
+                          <div class="card-body">
+                            <h5 class="card-title review-author-name">
+                              Петров Петр Петрович
+                            </h5>
+                            <h6
+                              class="card-subtitle mb-2 text-body-secondary item-name"
+                            >
+                              Мир глазами историка
+                            </h6>
+                            <h6
+                              class="card-subtitle mb-2 text-body-secondary guide-name"
+                            >
+                              <span class="span-guide-name">Гид:</span>
+                              Иванов Иван Иванович
+                            </h6>
+                            <p class="card-text review-text">
+                              Немного быстрого примера текста для построения на
+                              заголовке карточки и составления основной части
+                              содержимого карточки. Немного быстрого примера
+                              текста для построения на заголовке карточки и
+                              составления основной части содержимого карточки.
+                            </p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <div class="card review-cart">
+                          <div class="card-body">
+                            <h5 class="card-title review-author-name">
+                              Петров Петр Петрович
+                            </h5>
+                            <h6
+                              class="card-subtitle mb-2 text-body-secondary item-name"
+                            >
+                              Мир глазами историка
+                            </h6>
+                            <h6
+                              class="card-subtitle mb-2 text-body-secondary guide-name"
+                            >
+                              <span class="span-guide-name">Гид:</span>
+                              Иванов Иван Иванович
+                            </h6>
+                            <p class="card-text review-text">
+                              Немного быстрого примера текста для построения на
+                              заголовке карточки и составления основной части
+                              содержимого карточки.
+                            </p>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="carousel-item">
+                        <div class="card review-cart">
+                          <div class="card-body">
+                            <h5 class="card-title review-author-name">
+                              Петров Петр Петрович
+                            </h5>
+                            <h6
+                              class="card-subtitle mb-2 text-body-secondary item-name"
+                            >
+                              Мир глазами историка
+                            </h6>
+                            <h6
+                              class="card-subtitle mb-2 text-body-secondary guide-name"
+                            >
+                              <span class="span-guide-name">Гид:</span>Иванов
+                              Иван Иванович
+                            </h6>
+                            <p class="card-text review-text">
+                              Немного быстрого примера текста для построения на
+                              заголовке карточки и составления основной части
+                              содержимого карточки.
+                            </p>
+                          </div>
+                        </div>
+                      </div>
                     </div>
-                    <div class="carousel-item">
-                      <img src="..." class="d-block w-100" alt="..." />
-                    </div>
-                    <div class="carousel-item">
-                      <img src="..." class="d-block w-100" alt="..." />
-                    </div>
+
+                    <button
+                      class="carousel-control-prev"
+                      type="button"
+                      data-bs-target="#carouselExample"
+                      data-bs-slide="prev"
+                    >
+                      <span
+                        class="carousel-control-prev-icon arrow-right"
+                        aria-hidden="true"
+                      ></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button
+                      class="carousel-control-next"
+                      type="button"
+                      data-bs-target="#carouselExample"
+                      data-bs-slide="next"
+                    >
+                      <span
+                        class="carousel-control-next-icon arrow-left"
+                        aria-hidden="true"
+                      ></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
                   </div>
-                  <button
-                    class="carousel-control-prev"
-                    type="button"
-                    data-bs-target="#carouselExampleAutoplaying"
-                    data-bs-slide="prev"
-                  >
-                    <span
-                      class="carousel-control-prev-icon"
-                      aria-hidden="true"
-                    ></span>
-                    <span class="visually-hidden">Previous</span>
-                  </button>
-                  <button
-                    class="carousel-control-next"
-                    type="button"
-                    data-bs-target="#carouselExampleAutoplaying"
-                    data-bs-slide="next"
-                  >
-                    <span
-                      class="carousel-control-next-icon"
-                      aria-hidden="true"
-                    ></span>
-                    <span class="visually-hidden">Next</span>
-                  </button>
                 </div>
               </section>
             </details>
