переопределила стили Bootstrap в отзывах

--- a/categoryPage.html
+++ b/categoryPage.html
@@ -105,10 +105,10 @@
               class="item-img"
               alt="item-img"
             />
-            <div class="item-cart-desc">
+            <!--div class="item-cart-desc">
               <p class="item-age">1-4 классы</p>
               <p class="item-time">~ 90 мин</p>
-            </div>
+            </div!-->
             <details class="item-list">
               <summary class="item-title">Урок «Мир глазами историка»</summary>
               <section class="item-desc">
