добавила дату отзыва, прижала ее как подвал в карточке отзывов

--- a/categoryPage.html
+++ b/categoryPage.html
@@ -359,7 +359,7 @@
                     <div class="carousel-inner">
                       <div class="carousel-item active">
                         <div class="card review-cart">
-                          <div class="card-body">
+                          <div class="card-body review-cart-text">
                             <h5 class="card-title review-author-name">
                               Петров Петр Петрович
                             </h5>
@@ -381,12 +381,17 @@
                               текста для построения на заголовке карточки и
                               составления основной части содержимого карточки.
                             </p>
+                            <p
+                              class="card-subtitle mb-2 text-body-secondary review-date"
+                            >
+                              28.11.2025
+                            </p>
                           </div>
                         </div>
                       </div>
                       <div class="carousel-item">
                         <div class="card review-cart">
-                          <div class="card-body">
+                          <div class="card-body review-cart-text">
                             <h5 class="card-title review-author-name">
                               Петров Петр Петрович
                             </h5>
@@ -406,13 +411,18 @@
                               заголовке карточки и составления основной части
                               содержимого карточки.
                             </p>
+                            <p
+                              class="card-subtitle mb-2 text-body-secondary review-date"
+                            >
+                              28.11.2025
+                            </p>
                           </div>
                         </div>
                       </div>
 
                       <div class="carousel-item">
                         <div class="card review-cart">
-                          <div class="card-body">
+                          <div class="card-body review-cart-text">
                             <h5 class="card-title review-author-name">
                               Петров Петр Петрович
                             </h5>
@@ -431,6 +441,11 @@
                               Немного быстрого примера текста для построения на
                               заголовке карточки и составления основной части
                               содержимого карточки.
+                            </p>
+                            <p
+                              class="card-subtitle mb-2 text-body-secondary review-date"
+                            >
+                              28.11.2025
                             </p>
                           </div>
                         </div>
