подключила стили bootstrap к главной странице

--- a/categoryPage.html
+++ b/categoryPage.html
@@ -29,7 +29,7 @@
       <div class="container header-container">
         <nav class="nav">
           <div class="logo">
-            <a href="./index.html" class="logo-href">
+            <a href="#" class="logo-href">
               <img class="logo-img" src="img/logo.png" alt="logo" />
               <span class="title">Классные &nbsp; &nbsp;экскурсии</span>
             </a>
@@ -47,9 +47,15 @@
                     <details class="list">
                       <summary class="link-list">Экскурсии</summary>
                       <div class="list-menu">
-                        <a href="#" class="menu-link">1-4 классы</a>
-                        <a href="#" class="menu-link">5-9 классы</a>
-                        <a href="#" class="menu-link">10-11 классы</a>
+                        <a href="./categoryPage.html" class="menu-link"
+                          >1-4 классы</a
+                        >
+                        <a href="./categoryPage.html" class="menu-link"
+                          >5-9 классы</a
+                        >
+                        <a href="./categoryPage.html" class="menu-link"
+                          >10-11 классы</a
+                        >
                       </div>
                     </details>
                   </li>
