--- a/index.html
+++ b/index.html
@@ -5,13 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Классные экскурсии</title>
 
-    <link rel="stylesheet" href="scss-css/style.css" />
+    <!-- Bootstrap CSS для карусели -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+      crossorigin="anonymous"
+    />
+
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Gabriela&family=Great+Vibes&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Свои стили -->
+    <link rel="stylesheet" href="scss-css/style.css" />
   </head>
   <body class="page">
     <header class="header">
