--- a/categoryPage.html
+++ b/categoryPage.html
@@ -29,7 +29,7 @@
       <div class="container header-container">
         <nav class="nav">
           <div class="logo">
-            <a href="#" class="logo-href">
+            <a href="./index.html" class="logo-href">
               <img class="logo-img" src="img/logo.png" alt="logo" />
               <span class="title">Классные &nbsp; &nbsp;экскурсии</span>
             </a>
@@ -60,14 +60,17 @@
                     </details>
                   </li>
                   <li class="menu-list">
-                    <a href="#" class="menu-link">Экскурсоводы</a>
-                  </li>
-                  <li class="menu-list">
                     <a href="#" class="menu-link">Блог</a>
                   </li>
                   <li class="menu-list">
                     <a href="#" class="menu-link">Отзывы</a>
                   </li>
+                  <li class="menu-list">
+                    <a href="#" class="menu-link">Галерея</a>
+                  </li>
+                  <!--li class="menu-list">
+                    <a href="#" class="menu-link">Экскурсоводы</a>
+                  </li!-->
                   <li class="menu-list">
                     <a href="#" class="menu-link">О компании</a>
                   </li>
