--- a/index.html
+++ b/index.html
@@ -60,14 +60,17 @@
                     </details>
                   </li>
                   <li class="menu-list">
-                    <a href="#" class="menu-link">Экскурсоводы</a>
-                  </li>
-                  <li class="menu-list">
                     <a href="#" class="menu-link">Блог</a>
                   </li>
                   <li class="menu-list">
                     <a href="#" class="menu-link">Отзывы</a>
                   </li>
+                  <li class="menu-list">
+                    <a href="#" class="menu-link">Галерея</a>
+                  </li>
+                  <!--li class="menu-list">
+                    <a href="#" class="menu-link">Экскурсоводы</a>
+                  </li!-->
                   <li class="menu-list">
                     <a href="#" class="menu-link">О компании</a>
                   </li>
