--- a/index.html
+++ b/index.html
@@ -319,5 +319,12 @@
         <p class="info">VIS© 2025</p>
       </div>
     </footer>
+
+    <!-- Bootstrap JS для карусели -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
