добавила mixin кнопки забронировать и блоков основной информации в карточке экскурсии. Изменила стили главный экран и добавила кнопку выбрать экскурсию

--- a/categoryPage.html
+++ b/categoryPage.html
@@ -168,7 +168,9 @@
                       <span class="item-desc-text">20 000 <span>₽</span></span>
                     </li>
                     <li class="basic-info-list-link">
-                      <a href="#" class="order-link">Забронировать</a>
+                      <a href="#" class="items-link" title="items-link"
+                        ><span class="item-link-title">Забронировать</span>
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -290,9 +292,9 @@
                       <p class="item-desc-title">Стоимость (группa)</p>
                       <span class="item-desc-text">20 000 <span>₽</span></span>
                     </li>
-                    <li class="basic-info-list-link">
-                      <a href="#" class="order-link">Забронировать</a>
-                    </li>
+                    <a href="#" class="items-link" title="items-link"
+                      ><span class="item-link-title">Забронировать</span>
+                    </a>
                   </ul>
                 </div>
               </section>
