--- a/index.html
+++ b/index.html
@@ -84,213 +84,219 @@
     <main class="main">
       <h1 class="hidden-section">Welcome to School Excursions</h1>
 
-      <div class="container main-container">
-        <div class="main-info">
-          <h4 class="main-info-title">Классные экскурсии</h4>
-          <p class="main-info-text">
-            Место для информации о сайте Место для информации о сайте Место для
-            информации о сайте Место для информации о сайте
-          </p>
-        </div>
+      <div class="main-container">
+        <section class="container main-info">
+          <h3 class="hidden-section">section excurtions info</h3>
+          <div class="main-info-desc">
+            <h4 class="main-info-title">Классные экскурсии</h4>
+            <p class="main-info-text">
+              Место для информации о сайте Место для информации о сайте Место
+              для информации о сайте Место для информации о сайте
+            </p>
+            <a href="#" class="items-link" title="items-link"
+              ><span class="item-link-title">Выбрать экскурсию</span>
+            </a>
+          </div>
 
-        <img
-          src="./img/main-info-img.jpg"
-          class="main-info-img"
-          alt="main-info-img"
-        />
+          <img
+            src="./img/main-info-img.jpg"
+            class="main-info-img"
+            alt="main-info-img"
+          />
+        </section>
+
+        <section class="gallery">
+          <h3 class="hidden-section">section excurtions gallery</h3>
+          <div class="container gallery-container">
+            <h2 class="gallery-title">Галерея</h2>
+
+            <div
+              id="carouselExampleAutoplaying"
+              class="carousel slide"
+              data-bs-ride="carousel"
+            >
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img
+                    src="./img/item-primary-school-science1.jpeg"
+                    class="d-block w-100"
+                    alt="primary-school-science"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="./img/item-primary-school-science2.jpeg"
+                    class="d-block w-100"
+                    alt="primary-school-science"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="./img/item-primary-school-science3.jpeg"
+                    class="d-block w-100"
+                    alt="primary-school-science"
+                  />
+                </div>
+              </div>
+              <button
+                class="carousel-control-prev"
+                type="button"
+                data-bs-target="#carouselExampleAutoplaying"
+                data-bs-slide="prev"
+              >
+                <span
+                  class="carousel-control-prev-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button
+                class="carousel-control-next"
+                type="button"
+                data-bs-target="#carouselExampleAutoplaying"
+                data-bs-slide="next"
+              >
+                <span
+                  class="carousel-control-next-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
+        </section>
+
+        <section class="reviews">
+          <h3 class="hidden-section">section excurtions reviews</h3>
+
+          <div class="container reviews-container">
+            <h2 class="reviews-title">Отзывы</h2>
+
+            <div id="carouselExample" class="carousel slide">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <div class="card review-cart">
+                    <div class="card-body review-cart-text">
+                      <h5 class="card-title review-author-name">
+                        Петров Петр Петрович
+                      </h5>
+                      <h6
+                        class="card-subtitle mb-2 text-body-secondary item-name"
+                      >
+                        Мир глазами историка
+                      </h6>
+                      <h6
+                        class="card-subtitle mb-2 text-body-secondary guide-name"
+                      >
+                        <span class="span-guide-name">Гид:</span>
+                        Иванов Иван Иванович
+                      </h6>
+                      <p class="card-text review-text">
+                        Немного быстрого примера текста для построения на
+                        заголовке карточки и составления основной части
+                        содержимого карточки. Немного быстрого примера текста
+                        для построения на заголовке карточки и составления
+                        основной части содержимого карточки.
+                      </p>
+                      <p
+                        class="card-subtitle mb-2 text-body-secondary review-date"
+                      >
+                        28.11.2025
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="card review-cart">
+                    <div class="card-body review-cart-text">
+                      <h5 class="card-title review-author-name">
+                        Петров Петр Петрович
+                      </h5>
+                      <h6
+                        class="card-subtitle mb-2 text-body-secondary item-name"
+                      >
+                        Мир глазами историка
+                      </h6>
+                      <h6
+                        class="card-subtitle mb-2 text-body-secondary guide-name"
+                      >
+                        <span class="span-guide-name">Гид:</span>
+                        Иванов Иван Иванович
+                      </h6>
+                      <p class="card-text review-text">
+                        Немного быстрого примера текста для построения на
+                        заголовке карточки и составления основной части
+                        содержимого карточки.
+                      </p>
+                      <p
+                        class="card-subtitle mb-2 text-body-secondary review-date"
+                      >
+                        28.11.2025
+                      </p>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="carousel-item">
+                  <div class="card review-cart">
+                    <div class="card-body review-cart-text">
+                      <h5 class="card-title review-author-name">
+                        Петров Петр Петрович
+                      </h5>
+                      <h6
+                        class="card-subtitle mb-2 text-body-secondary item-name"
+                      >
+                        Мир глазами историка
+                      </h6>
+                      <h6
+                        class="card-subtitle mb-2 text-body-secondary guide-name"
+                      >
+                        <span class="span-guide-name">Гид:</span>Иванов Иван
+                        Иванович
+                      </h6>
+                      <p class="card-text review-text">
+                        Немного быстрого примера текста для построения на
+                        заголовке карточки и составления основной части
+                        содержимого карточки.
+                      </p>
+                      <p
+                        class="card-subtitle mb-2 text-body-secondary review-date"
+                      >
+                        28.11.2025
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <button
+                class="carousel-control-prev"
+                type="button"
+                data-bs-target="#carouselExample"
+                data-bs-slide="prev"
+              >
+                <span
+                  class="carousel-control-prev-icon arrow-right"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button
+                class="carousel-control-next"
+                type="button"
+                data-bs-target="#carouselExample"
+                data-bs-slide="next"
+              >
+                <span
+                  class="carousel-control-next-icon arrow-left"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
+        </section>
       </div>
-
-      <section class="gallery">
-        <h3 class="hidden-section">section excurtions gallery</h3>
-        <div class="gallery-container">
-          <h2 class="gallery-title">Галерея</h2>
-
-          <div
-            id="carouselExampleAutoplaying"
-            class="carousel slide"
-            data-bs-ride="carousel"
-          >
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img
-                  src="./img/item-primary-school-science1.jpeg"
-                  class="d-block w-100"
-                  alt="primary-school-science"
-                />
-              </div>
-              <div class="carousel-item">
-                <img
-                  src="./img/item-primary-school-science2.jpeg"
-                  class="d-block w-100"
-                  alt="primary-school-science"
-                />
-              </div>
-              <div class="carousel-item">
-                <img
-                  src="./img/item-primary-school-science3.jpeg"
-                  class="d-block w-100"
-                  alt="primary-school-science"
-                />
-              </div>
-            </div>
-            <button
-              class="carousel-control-prev"
-              type="button"
-              data-bs-target="#carouselExampleAutoplaying"
-              data-bs-slide="prev"
-            >
-              <span
-                class="carousel-control-prev-icon"
-                aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button
-              class="carousel-control-next"
-              type="button"
-              data-bs-target="#carouselExampleAutoplaying"
-              data-bs-slide="next"
-            >
-              <span
-                class="carousel-control-next-icon"
-                aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-        </div>
-      </section>
-
-      <section class="reviews">
-        <h3 class="hidden-section">section excurtions reviews</h3>
-
-        <div class="reviews-container">
-          <h2 class="reviews-title">Отзывы</h2>
-
-          <div id="carouselExample" class="carousel slide">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <div class="card review-cart">
-                  <div class="card-body review-cart-text">
-                    <h5 class="card-title review-author-name">
-                      Петров Петр Петрович
-                    </h5>
-                    <h6
-                      class="card-subtitle mb-2 text-body-secondary item-name"
-                    >
-                      Мир глазами историка
-                    </h6>
-                    <h6
-                      class="card-subtitle mb-2 text-body-secondary guide-name"
-                    >
-                      <span class="span-guide-name">Гид:</span>
-                      Иванов Иван Иванович
-                    </h6>
-                    <p class="card-text review-text">
-                      Немного быстрого примера текста для построения на
-                      заголовке карточки и составления основной части
-                      содержимого карточки. Немного быстрого примера текста для
-                      построения на заголовке карточки и составления основной
-                      части содержимого карточки.
-                    </p>
-                    <p
-                      class="card-subtitle mb-2 text-body-secondary review-date"
-                    >
-                      28.11.2025
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <div class="card review-cart">
-                  <div class="card-body review-cart-text">
-                    <h5 class="card-title review-author-name">
-                      Петров Петр Петрович
-                    </h5>
-                    <h6
-                      class="card-subtitle mb-2 text-body-secondary item-name"
-                    >
-                      Мир глазами историка
-                    </h6>
-                    <h6
-                      class="card-subtitle mb-2 text-body-secondary guide-name"
-                    >
-                      <span class="span-guide-name">Гид:</span>
-                      Иванов Иван Иванович
-                    </h6>
-                    <p class="card-text review-text">
-                      Немного быстрого примера текста для построения на
-                      заголовке карточки и составления основной части
-                      содержимого карточки.
-                    </p>
-                    <p
-                      class="card-subtitle mb-2 text-body-secondary review-date"
-                    >
-                      28.11.2025
-                    </p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="carousel-item">
-                <div class="card review-cart">
-                  <div class="card-body review-cart-text">
-                    <h5 class="card-title review-author-name">
-                      Петров Петр Петрович
-                    </h5>
-                    <h6
-                      class="card-subtitle mb-2 text-body-secondary item-name"
-                    >
-                      Мир глазами историка
-                    </h6>
-                    <h6
-                      class="card-subtitle mb-2 text-body-secondary guide-name"
-                    >
-                      <span class="span-guide-name">Гид:</span>Иванов Иван
-                      Иванович
-                    </h6>
-                    <p class="card-text review-text">
-                      Немного быстрого примера текста для построения на
-                      заголовке карточки и составления основной части
-                      содержимого карточки.
-                    </p>
-                    <p
-                      class="card-subtitle mb-2 text-body-secondary review-date"
-                    >
-                      28.11.2025
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <button
-              class="carousel-control-prev"
-              type="button"
-              data-bs-target="#carouselExample"
-              data-bs-slide="prev"
-            >
-              <span
-                class="carousel-control-prev-icon arrow-right"
-                aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button
-              class="carousel-control-next"
-              type="button"
-              data-bs-target="#carouselExample"
-              data-bs-slide="next"
-            >
-              <span
-                class="carousel-control-next-icon arrow-left"
-                aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-        </div>
-      </section>
     </main>
     <footer class="footer">
       <div class="container footer-container">
