изменила отступы карточках отзывы и галерея

--- a/categoryPage.html
+++ b/categoryPage.html
@@ -363,7 +363,7 @@
               <section class="reviews">
                 <h3 class="hidden-section">section excurtions reviews</h3>
 
-                <div class="container reviews-container">
+                <div class="reviews-container">
                   <h2 class="reviews-title">Отзывы</h2>
 
                   <div id="carouselExample" class="carousel slide">
