--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
           />
         </section>
 
-        <section class="gallery">
+        <section class="gallery container">
           <h3 class="hidden-section">section excurtions gallery</h3>
-          <div class="container gallery-container">
+          <div class="gallery-container">
             <h2 class="gallery-title">Галерея</h2>
 
             <div
@@ -166,10 +166,10 @@
           </div>
         </section>
 
-        <section class="reviews">
+        <section class="reviews container">
           <h3 class="hidden-section">section excurtions reviews</h3>
 
-          <div class="container reviews-container">
+          <div class="reviews-container">
             <h2 class="reviews-title">Отзывы</h2>
 
             <div id="carouselExample" class="carousel slide">
