--- a/categoryPage.html
+++ b/categoryPage.html
@@ -500,7 +500,7 @@
       <div class="container footer-container">
         <nav class="nav">
           <div class="logo">
-            <a href="#" class="logo-href">
+            <a href="./index.html" class="logo-href">
               <img class="logo-img" src="img/logo.png" alt="logo" />
               <span class="title">Классные &nbsp; &nbsp;экскурсии</span>
             </a>
