изменила размеры кнопки заказать экскурсию на главной странице

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               Место для информации о сайте Место для информации о сайте Место
               для информации о сайте Место для информации о сайте
             </p>
-            <a href="#" class="items-link" title="items-link"
+            <a href="#" class="link-choose-item" title="items-link"
               ><span class="item-link-title">Выбрать экскурсию</span>
             </a>
           </div>
