удалила container из карточек отзывы и галерея

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           />
         </section>
 
-        <section class="gallery container">
+        <section class="gallery">
           <h3 class="hidden-section">section excurtions gallery</h3>
           <div class="gallery-container">
             <h2 class="gallery-title">Галерея</h2>
@@ -166,7 +166,7 @@
           </div>
         </section>
 
-        <section class="reviews container">
+        <section class="reviews">
           <h3 class="hidden-section">section excurtions reviews</h3>
 
           <div class="reviews-container">
