добавила блок на главную страницу для текста осайте

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
           <div class="main-info-desc">
             <h4 class="main-info-title">Классные экскурсии</h4>
             <p class="main-info-text">
-              Место для информации о сайте Место для информации о сайте Место
-              для информации о сайте Место для информации о сайте
+              Место для слогана сайте Место для слогана сайте Место для слогана
+              сайте
             </p>
             <a href="#" class="link-choose-item" title="items-link"
               ><span class="item-link-title">Выбрать экскурсию</span>
@@ -104,6 +104,17 @@
             alt="main-info-img"
           />
         </section>
+        <div class="main-text-item">
+          <h4 class="desc-title">Классные экскурсии</h4>
+          <p class="desc-text-item">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni est
+            qui iure unde, repellat perferendis exercitationem reprehenderit
+            harum? Quibusdam expedita officia iste, accusantium esse provident
+            asperiores iure quos consequuntur possimus amet repudiandae mollitia
+            quidem corporis aspernatur beatae sequi nisi saepe commodi culpa
+            quod ut architecto similique. Beatae in eum nostrum?
+          </p>
+        </div>
 
         <section class="gallery">
           <h3 class="hidden-section">section excurtions gallery</h3>
