добавила блок экскурсии на главной странице, прописала сала стили к нему @media 420px и 700px

--- a/categoryPage.html
+++ b/categoryPage.html
@@ -109,15 +109,13 @@
           <h3 class="hidden-section">section excurtions</h3>
 
           <div class="item-cart">
-            <img
-              src="./img/item-primary-school-science4.jpeg"
-              class="item-img"
-              alt="item-img"
-            />
-            <!--div class="item-cart-desc">
-              <p class="item-age">1-4 классы</p>
-              <p class="item-time">~ 90 мин</p>
-            </div!-->
+            <div class="item-cart-img">
+              <div class="item-cart-desc">
+                <p class="item-age">1-4 классы</p>
+                <p class="item-time">~ 90 мин</p>
+              </div>
+            </div>
+
             <details class="item-list">
               <summary class="item-title">Урок «Мир глазами историка»</summary>
               <section class="item-desc">
