--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <h1 class="hidden-section">Welcome to School Excursions</h1>
 
       <div class="main-container">
-        <section class="container main-info">
+        <section class="container main-info-header">
           <h3 class="hidden-section">section excurtions info</h3>
           <div class="main-info-desc">
             <h4 class="main-info-title">Классные экскурсии</h4>
@@ -115,6 +115,36 @@
             quod ut architecto similique. Beatae in eum nostrum?
           </p>
         </div>
+
+        <section class="categories">
+          <h3 class="hidden-section">section excurtions categories</h3>
+          <div class="categories-container">
+            <h2 class="categories-title">Экскурсии</h2>
+            <ul class="categoties-list">
+              <li class="categoty-line">
+                <a href="./categoryPage.html" class="category-link">
+                  <div class="category-cart primary-school-img">
+                    <p class="category-title">1-4 классы</p>
+                  </div>
+                </a>
+              </li>
+              <li class="categoty-line">
+                <a href="./categoryPage.html" class="category-link">
+                  <div class="category-cart high-school-img">
+                    <p class="category-title">5-9 классы</p>
+                  </div>
+                </a>
+              </li>
+              <li class="categoty-line">
+                <a href="./categoryPage.html" class="category-link">
+                  <div class="category-cart graduation-school-img">
+                    <p class="category-title">10-11 классы</p>
+                  </div>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </section>
 
         <section class="gallery">
           <h3 class="hidden-section">section excurtions gallery</h3>
