добавила ссылку на Экскурсии в кнопке Выбрать экскурсию

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               Место для слогана сайте Место для слогана сайте Место для слогана
               сайте
             </p>
-            <a href="#" class="link-choose-item" title="items-link"
+            <a href="#categories" class="link-choose-item" title="items-link"
               ><span class="item-link-title">Выбрать экскурсию</span>
             </a>
           </div>
@@ -119,7 +119,7 @@
         <section class="categories">
           <h3 class="hidden-section">section excurtions categories</h3>
           <div class="categories-container">
-            <h2 class="categories-title">Экскурсии</h2>
+            <h2 class="categories-title" id="categories">Экскурсии</h2>
             <ul class="categoties-list">
               <li class="categoty-line">
                 <a href="./categoryPage.html" class="category-link">
