исправила грамматическую ошибку в category-link

--- a/index.html
+++ b/index.html
@@ -121,21 +121,21 @@
           <div class="categories-container">
             <h2 class="categories-title" id="categories">Экскурсии</h2>
             <ul class="categoties-list">
-              <li class="categoty-line">
+              <li class="category-line">
                 <a href="./categoryPage.html" class="category-link">
                   <div class="category-cart primary-school-img">
                     <p class="category-title">1-4 классы</p>
                   </div>
                 </a>
               </li>
-              <li class="categoty-line">
+              <li class="category-line">
                 <a href="./categoryPage.html" class="category-link">
                   <div class="category-cart high-school-img">
                     <p class="category-title">5-9 классы</p>
                   </div>
                 </a>
               </li>
-              <li class="categoty-line">
+              <li class="category-line">
                 <a href="./categoryPage.html" class="category-link">
                   <div class="category-cart graduation-school-img">
                     <p class="category-title">10-11 классы</p>
