--- a/categoryPage.html
+++ b/categoryPage.html
@@ -1295,7 +1295,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <!-- Закртытие предыдущей ькарточки экскурсии при открытии следующей -->
+    <!-- Закртытие предыдущей карточки экскурсии при открытии следующей -->
     <script>
       const detailsOpen = document.querySelectorAll(".item-list");
 
