--- a/categoryPage.html
+++ b/categoryPage.html
@@ -63,7 +63,7 @@
                     <a href="#" class="menu-link">Блог</a>
                   </li>
                   <li class="menu-list">
-                    <a href="#" class="menu-link">Отзывы</a>
+                    <a href="./reviewsPage.html" class="menu-link">Отзывы</a>
                   </li>
                   <li class="menu-list">
                     <a href="#" class="menu-link">Галерея</a>
@@ -1261,30 +1261,36 @@
     </main>
 
     <footer class="footer">
-      <div class="container footer-container">
-        <nav class="nav">
-          <div class="logo">
-            <a href="./index.html" class="logo-href">
-              <img class="logo-img" src="img/logo.png" alt="logo" />
-              <span class="title">Классные &nbsp; &nbsp;экскурсии</span>
-            </a>
-          </div>
+      <div class="container">
+        <div class="footer-container">
+          <nav class="nav">
+            <div class="logo">
+              <a href="#" class="logo-href">
+                <img class="logo-img" src="img/logo.png" alt="logo" />
+                <span class="title">Классные &nbsp; &nbsp;экскурсии</span>
+              </a>
+            </div>
 
-          <div class="footer-menu">
-            <ul class="menu">
-              <li class="footer-menu-list">
-                <a href="#" class="menu-link">Отзывы</a>
-              </li>
-              <li class="footer-menu-list">
-                <a href="#" class="menu-link">О компании</a>
-              </li>
-              <li class="footer-menu-list">
-                <img class="icon-img" src="img/icon-telegram.png" alt="icon" />
-              </li>
-            </ul>
-          </div>
-        </nav>
-        <p class="info">VIS© 2025</p>
+            <div class="footer-menu">
+              <ul class="menu">
+                <li class="footer-menu-list">
+                  <a href="./reviewsPage.html" class="menu-link">Отзывы</a>
+                </li>
+                <li class="footer-menu-list">
+                  <a href="#" class="menu-link">О компании</a>
+                </li>
+                <li class="footer-menu-list">
+                  <img
+                    class="icon-img"
+                    src="img/icon-telegram.png"
+                    alt="icon"
+                  />
+                </li>
+              </ul>
+            </div>
+          </nav>
+          <p class="info">VIS© 2025</p>
+        </div>
       </div>
     </footer>
 
