--- a/reviewsPage.html
+++ b/reviewsPage.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Отзывы</title>
 
+    <!-- Bootstrap CSS для карусели -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+      crossorigin="anonymous"
+    />
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -55,7 +63,7 @@
                     <a href="#" class="menu-link">Блог</a>
                   </li>
                   <li class="menu-list">
-                    <a href="#" class="menu-link">Отзывы</a>
+                    <a href="./reviewsPage.html" class="menu-link">Отзывы</a>
                   </li>
                   <li class="menu-list">
                     <a href="#" class="menu-link">Галерея</a>
@@ -82,18 +90,114 @@
             <a href="./index.html" class="menu-link-breadcrumbles">Главная</a>
             <span class="arrow-menu-breadcrumbles"> </span>
           </li>
-
           <li class="menu-list-breadcrumbles">
-            <a href="#" class="menu-link-breadcrumbles-bold">Отзывы</a>
+            <a href="#" class="menu-link-breadcrumbles">Экскурсии</a>
+            <span class="arrow-menu-breadcrumbles"></span>
+          </li>
+          <li class="menu-list-breadcrumbles">
+            <a href="#" class="menu-link-breadcrumbles-bold">1-4 класс</a>
           </li>
         </ul>
       </div>
     </section>
 
-    <main class="main reviews-main-container">
+    <main class="main reviews-page-container">
       <h1 class="hidden-section">Welcome to School Excursions reviews page</h1>
 
-      <div class="container"></div>
+      <div class="container">
+        <h2 class="reviews-title">Отзывы</h2>
+        <div class="reviews-list">
+          <div class="review-cart">
+            <div class="review-cart-text">
+              <h5 class="review-author-name">Петров Петр Петрович</h5>
+              <h6 class="item-name">Мир глазами историка</h6>
+              <h6 class="guide-name">
+                <span class="span-guide-name">Гид:</span>
+                Иванов Иван Иванович
+              </h6>
+              <p class="review-text">
+                Немного быстрого примера текста для построения на заголовке
+                карточки и составления основной части содержимого карточки.
+                Немного быстрого примера текста для построения на заголовке
+                карточки и составления основной части содержимого карточки.
+              </p>
+              <p class="review-date">28.11.2025</p>
+            </div>
+          </div>
+
+          <div class="review-cart">
+            <div class="review-cart-text">
+              <h5 class="review-author-name">Петров Петр Петрович</h5>
+              <h6 class="item-name">Мир глазами историка</h6>
+              <h6 class="guide-name">
+                <span class="span-guide-name">Гид:</span>
+                Иванов Иван Иванович
+              </h6>
+              <p class="review-text">
+                Немного быстрого примера текста для построения на заголовке
+                карточки и составления основной части содержимого карточки.
+                Немного быстрого примера текста для построения на заголовке
+                карточки и составления основной части содержимого карточки.
+              </p>
+              <p class="review-date">28.11.2025</p>
+            </div>
+          </div>
+
+          <div class="review-cart">
+            <div class="review-cart-text">
+              <h5 class="review-author-name">Петров Петр Петрович</h5>
+              <h6 class="item-name">Мир глазами историка</h6>
+              <h6 class="guide-name">
+                <span class="span-guide-name">Гид:</span>
+                Иванов Иван Иванович
+              </h6>
+              <p class="review-text">
+                Немного быстрого примера текста для построения на заголовке
+                карточки и составления основной части содержимого карточки.
+                Немного быстрого примера текста для построения на заголовке
+                карточки и составления основной части содержимого карточки.
+              </p>
+              <p class="review-date">28.11.2025</p>
+            </div>
+          </div>
+
+          <div class="review-cart">
+            <div class="review-cart-text">
+              <h5 class="review-author-name">Петров Петр Петрович</h5>
+              <h6 class="item-name">Мир глазами историка</h6>
+              <h6 class="guide-name">
+                <span class="span-guide-name">Гид:</span>
+                Иванов Иван Иванович
+              </h6>
+              <p class="review-text">
+                Немного быстрого примера текста для построения на заголовке
+                карточки и составления основной части содержимого карточки.
+                Немного быстрого примера текста для построения на заголовке
+                карточки и составления основной части содержимого карточки.
+              </p>
+              <p class="review-date">28.11.2025</p>
+            </div>
+          </div>
+
+          <div class="review-cart">
+            <div class="review-cart-text">
+              <h5 class="review-author-name">Петров Петр Петрович</h5>
+              <h6 class="item-name">Мир глазами историка</h6>
+              <h6 class="guide-name">
+                <span class="span-guide-name">Гид:</span>
+                Иванов Иван Иванович
+              </h6>
+              <p class="review-text">
+                Немного быстрого примера текста для построения на заголовке
+                карточки и составления основной части содержимого карточки.
+                Немного быстрого примера текста для построения на заголовке
+                карточки и составления основной части содержимого карточки.
+              </p>
+              <p class="review-date">28.11.2025</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <footer class="footer">
@@ -110,7 +214,7 @@
             <div class="footer-menu">
               <ul class="menu">
                 <li class="footer-menu-list">
-                  <a href="#" class="menu-link">Отзывы</a>
+                  <a href="./reviewsPage.html" class="menu-link">Отзывы</a>
                 </li>
                 <li class="footer-menu-list">
                   <a href="#" class="menu-link">О компании</a>
