написала карточки отзывов и стили

--- a/categoryPage.html
+++ b/categoryPage.html
@@ -367,7 +367,7 @@
                   <div id="carouselExample" class="carousel slide">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <div class="card review-cart">
+                        <div class="card review-cart-slider">
                           <div class="card-body review-cart-text">
                             <h5 class="card-title review-author-name">
                               Петров Петр Петрович
@@ -399,7 +399,7 @@
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <div class="card review-cart">
+                        <div class="card review-cart-slider">
                           <div class="card-body review-cart-text">
                             <h5 class="card-title review-author-name">
                               Петров Петр Петрович
@@ -430,7 +430,7 @@
                       </div>
 
                       <div class="carousel-item">
-                        <div class="card review-cart">
+                        <div class="card review-cart-slider">
                           <div class="card-body review-cart-text">
                             <h5 class="card-title review-author-name">
                               Петров Петр Петрович
@@ -750,7 +750,7 @@
                   <div id="carouselExample" class="carousel slide">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <div class="card review-cart">
+                        <div class="card review-cart-slider">
                           <div class="card-body review-cart-text">
                             <h5 class="card-title review-author-name">
                               Петров Петр Петрович
@@ -782,7 +782,7 @@
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <div class="card review-cart">
+                        <div class="card review-cart-slider">
                           <div class="card-body review-cart-text">
                             <h5 class="card-title review-author-name">
                               Петров Петр Петрович
@@ -813,7 +813,7 @@
                       </div>
 
                       <div class="carousel-item">
-                        <div class="card review-cart">
+                        <div class="card review-cart-slider">
                           <div class="card-body review-cart-text">
                             <h5 class="card-title review-author-name">
                               Петров Петр Петрович
@@ -1133,7 +1133,7 @@
                   <div id="carouselExample" class="carousel slide">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <div class="card review-cart">
+                        <div class="card review-cart-slider">
                           <div class="card-body review-cart-text">
                             <h5 class="card-title review-author-name">
                               Петров Петр Петрович
@@ -1165,7 +1165,7 @@
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <div class="card review-cart">
+                        <div class="card review-cart-slider">
                           <div class="card-body review-cart-text">
                             <h5 class="card-title review-author-name">
                               Петров Петр Петрович
@@ -1196,7 +1196,7 @@
                       </div>
 
                       <div class="carousel-item">
-                        <div class="card review-cart">
+                        <div class="card review-cart-slider">
                           <div class="card-body review-cart-text">
                             <h5 class="card-title review-author-name">
                               Петров Петр Петрович
