--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             <div id="carouselExample" class="carousel slide">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <div class="card review-cart">
+                  <div class="card review-cart-slider">
                     <div class="card-body review-cart-text">
                       <h5 class="card-title review-author-name">
                         Петров Петр Петрович
@@ -248,7 +248,7 @@
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <div class="card review-cart">
+                  <div class="card review-cart-slider">
                     <div class="card-body review-cart-text">
                       <h5 class="card-title review-author-name">
                         Петров Петр Петрович
@@ -279,7 +279,7 @@
                 </div>
 
                 <div class="carousel-item">
-                  <div class="card review-cart">
+                  <div class="card review-cart-slider">
                     <div class="card-body review-cart-text">
                       <h5 class="card-title review-author-name">
                         Петров Петр Петрович
