добавила иконку плюс на страницу отзывов, изменила стили формы оставить отзыв

--- a/reviewsPage.html
+++ b/reviewsPage.html
@@ -105,57 +105,70 @@
         <h2 class="reviews-title">Отзывы</h2>
 
         <div class="review-form-container">
-          <h2 class="reviews-title">Оставить отзыв</h2>
-
-          <form action="" class="review-form">
-            <input
-              type="text"
-              class="author-name"
-              placeholder="Ваше имя"
-              id="form-review-author-name"
-            />
-            <input
-              type="tel"
-              placeholder="Ваш номер телефона (не публикуется)"
-              id="form-review-author-tel"
-            />
-            <input
-              type="text"
-              class="guide-name"
-              placeholder="Название экскурсии"
-              id="form-review-guide-name"
-            />
-            <textarea
-              class="review-desc"
-              placeholder="Ваш отзыв"
-              name="review-desc"
-              id="form-review-text-desc"
-            ></textarea>
-            <div class="form-btn">
-              <input
-                type="submit"
-                class="review-form-btn"
-                id="form-review-btn-submit"
-                value="Отправить отзыв"
+          <div class="add-review">
+            <button type="button" class="btn-add-review" title="btn-add">
+              <img
+                src="./img/icons8-plus-64.png"
+                class="add-review-icon"
+                alt="add-review-icon"
               />
+            </button>
+            <div class="add-review-form">
+              <h2 class="reviews-title">Оставить отзыв</h2>
+              <form action="" class="review-form">
+                <input
+                  type="text"
+                  class="input-form"
+                  placeholder="Ваше имя"
+                  id="form-review-author-name"
+                />
+                <input
+                  type="tel"
+                  class="input-form"
+                  placeholder="Ваш номер телефона (не публикуется)"
+                  id="form-review-author-tel"
+                />
+                <input
+                  type="text"
+                  class="input-form"
+                  placeholder="Название экскурсии"
+                  id="form-review-guide-name"
+                />
+                <textarea
+                  class="input-form"
+                  placeholder="Ваш отзыв"
+                  name="review-desc"
+                  id="form-review-text-desc"
+                ></textarea>
+                <div class="form-btn">
+                  <input
+                    type="submit"
+                    class="review-form-btn"
+                    id="form-review-btn-submit"
+                    value="Отправить отзыв"
+                  />
 
-              <input
-                type="reset"
-                class="review-form-btn"
-                id="form-review-btn-reset"
-                value="Отмена"
-              />
+                  <input
+                    type="reset"
+                    class="review-form-btn"
+                    id="form-review-btn-reset"
+                    value="Отмена"
+                  />
+                </div>
+              </form>
             </div>
-          </form>
+          </div>
         </div>
         <div class="reviews-list">
           <div class="review-cart">
             <h5 class="review-author-name">Петров Петр Петрович</h5>
             <h6 class="item-name">Мир глазами историка</h6>
-            <h6 class="guide-name">
-              <span class="span-guide-name">Гид:</span>
-              Иванов Иван Иванович
-            </h6>
+            <!--
+              <h6 class="guide-name">
+                <span class="span-guide-name">Гид:</span>
+                Иванов Иван Иванович
+              </h6>!
+            -->
             <p class="review-text">
               Немного быстрого примера текста для построения на заголовке
               карточки и составления основной части содержимого карточки.
@@ -171,10 +184,12 @@
           <div class="review-cart">
             <h5 class="review-author-name">Петров Петр Петрович</h5>
             <h6 class="item-name">Мир глазами историка</h6>
-            <h6 class="guide-name">
-              <span class="span-guide-name">Гид:</span>
-              Иванов Иван Иванович
-            </h6>
+            <!--
+              <h6 class="guide-name">
+                <span class="span-guide-name">Гид:</span>
+                Иванов Иван Иванович
+              </h6>!
+            -->
             <p class="review-text">
               Немного быстрого примера текста для построения на заголовке
               карточки и составления основной части содержимого карточки.
@@ -186,10 +201,12 @@
           <div class="review-cart">
             <h5 class="review-author-name">Петров Петр Петрович</h5>
             <h6 class="item-name">Мир глазами историка</h6>
-            <h6 class="guide-name">
-              <span class="span-guide-name">Гид:</span>
-              Иванов Иван Иванович
-            </h6>
+            <!--
+              <h6 class="guide-name">
+                <span class="span-guide-name">Гид:</span>
+                Иванов Иван Иванович
+              </h6>!
+            -->
             <p class="review-text">
               Немного быстрого примера текста для построения на заголовке
               карточки и составления основной части содержимого карточки.
@@ -201,10 +218,12 @@
           <div class="review-cart">
             <h5 class="review-author-name">Петров Петр Петрович</h5>
             <h6 class="item-name">Мир глазами историка</h6>
-            <h6 class="guide-name">
-              <span class="span-guide-name">Гид:</span>
-              Иванов Иван Иванович
-            </h6>
+            <!--
+              <h6 class="guide-name">
+                <span class="span-guide-name">Гид:</span>
+                Иванов Иван Иванович
+              </h6>!
+            -->
             <p class="review-text">
               Немного быстрого примера текста для построения на заголовке
               карточки и составления основной части содержимого карточки.
