дописала стили формы отправить отзыв

--- a/reviewsPage.html
+++ b/reviewsPage.html
@@ -135,17 +135,20 @@
                   id="form-review-guide-name"
                 />
                 <textarea
-                  class="input-form"
+                  class="textea-form"
                   placeholder="Ваш отзыв"
                   name="review-desc"
                   id="form-review-text-desc"
+                  rows="10"
+                  spellcheck="true"
+                  wrap="hard"
                 ></textarea>
                 <div class="form-btn">
                   <input
                     type="submit"
                     class="review-form-btn"
                     id="form-review-btn-submit"
-                    value="Отправить отзыв"
+                    value="Отправить"
                   />
 
                   <input
