скрыла форму написать отзыв и прописала отображение при нажатии иконки добавить отзыв

--- a/categoryPage.html
+++ b/categoryPage.html
@@ -1301,7 +1301,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <!-- Закртытие предыдущей карточки экскурсии при открытии следующей -->
+    <!-- Закрытие предыдущей карточки экскурсии при открытии следующей -->
     <script>
       const detailsOpen = document.querySelectorAll(".item-list");
 
