добавила подвал на страницу блога, прописала ссылку на главную страницу в подвале

--- a/blogPage.html
+++ b/blogPage.html
@@ -103,5 +103,38 @@
 
       <div class="container"></div>
     </main>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-container">
+          <nav class="nav">
+            <div class="logo">
+              <a href="./index.html" class="logo-href">
+                <img class="logo-img" src="img/logo.png" alt="logo" />
+                <span class="title">Классные &nbsp; &nbsp;экскурсии</span>
+              </a>
+            </div>
+
+            <div class="footer-menu">
+              <ul class="menu">
+                <li class="footer-menu-list">
+                  <a href="./reviewsPage.html" class="menu-link">Отзывы</a>
+                </li>
+                <li class="footer-menu-list">
+                  <a href="#" class="menu-link">О компании</a>
+                </li>
+                <li class="footer-menu-list">
+                  <img
+                    class="icon-img"
+                    src="img/icon-telegram.png"
+                    alt="icon"
+                  />
+                </li>
+              </ul>
+            </div>
+          </nav>
+          <p class="info">VIS© 2025</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
