--- a/categoryPage.html
+++ b/categoryPage.html
@@ -1265,7 +1265,7 @@
         <div class="footer-container">
           <nav class="nav">
             <div class="logo">
-              <a href="#" class="logo-href">
+              <a href="./index.html" class="logo-href">
                 <img class="logo-img" src="img/logo.png" alt="logo" />
                 <span class="title">Классные &nbsp; &nbsp;экскурсии</span>
               </a>
