переименовала icon-plus

--- a/reviewsPage.html
+++ b/reviewsPage.html
@@ -108,7 +108,7 @@
           <div class="add-review">
             <button type="button" class="btn-add-review" title="btn-add">
               <img
-                src="./img/icons8-plus-64.png"
+                src="./img/icons-plus.png"
                 class="add-review-icon"
                 alt="add-review-icon"
               />
