добавила карточку для статьи блога

--- a/categoryPage.html
+++ b/categoryPage.html
@@ -105,7 +105,7 @@
       <h1 class="hidden-section">Welcome to School Excursions category page</h1>
 
       <div class="container">
-        <section class="items-container">
+        <section class="items items-container">
           <h3 class="hidden-section">section excurtions</h3>
 
           <div class="item-cart">
