закоментировала скрипт закрытия предыдущей карточки при открытии следующей

--- a/categoryPage.html
+++ b/categoryPage.html
@@ -1300,7 +1300,7 @@
     ></script>
 
     <!-- Закрытие предыдущей карточки экскурсии при открытии следующей -->
-    <script>
+    <!--script>
       const detailsOpen = document.querySelectorAll(".item-list");
 
       // добавить к каждому клику события клика //
@@ -1314,6 +1314,6 @@
           });
         });
       });
-    </script>
+    </script!-->
   </body>
 </html>
