--- a/blogPage.html
+++ b/blogPage.html
@@ -984,7 +984,7 @@
     ></script>
 
     <!-- Закрытие предыдущей карточки экскурсии при открытии следующей -->
-    <script>
+    <!--script>
       const detailsOpen = document.querySelectorAll(".item-list");
 
       // добавить к каждому клику события клика //
@@ -998,6 +998,6 @@
           });
         });
       });
-    </script>
+    </script!-->
   </body>
 </html>
