изменила отступы в стрелках отзывов

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
     <main class="main">
       <h1 class="hidden-section">Welcome to School Excursions</h1>
 
-      <div class="main-container">
-        <section class="container main-info-header">
+      <div class="container main-container">
+        <section class="main-info-header">
           <h3 class="hidden-section">section excurtions info</h3>
           <div class="main-info-desc">
             <h4 class="main-info-title">Классные экскурсии</h4>
