изменила ширину карточек экскурсии и информационных блоков в карточке, прописала ссылку на страницу экскурсии

--- a/categoryPage.html
+++ b/categoryPage.html
@@ -116,7 +116,7 @@
               </div>
             </div>
 
-            <a href="#" class="item-title link-item-cart-desc"
+            <a href="./productPage.html" class="item-title link-item-cart-desc"
               >Урок «Мир глазами историка»</a
             >
 
@@ -504,7 +504,7 @@
               </div>
             </div>
 
-            <a href="#" class="item-title link-item-cart-desc"
+            <a href="./productPage.html" class="item-title link-item-cart-desc"
               >Урок «Мир глазами историка»</a
             >
 
@@ -891,7 +891,7 @@
               </div>
             </div>
 
-            <a href="#" class="item-title link-item-cart-desc"
+            <a href="./productPage.html" class="item-title link-item-cart-desc"
               >Урок «Мир глазами историка»</a
             >
 
