удалила ссылку на экскурсии в шапке страницы экскурсии, изменила стили названия экскурсии

--- a/categoryPage.html
+++ b/categoryPage.html
@@ -121,7 +121,9 @@
             >
 
             <details class="item-list item-details">
-              <summary class="item-title">Урок «Мир глазами историка»</summary>
+              <summary class="item-title item-title-details">
+                Урок «Мир глазами историка»
+              </summary>
 
               <section class="item-desc">
                 <h3 class="hidden-section">section excurtions desc</h3>
