--- a/productPage.html
+++ b/productPage.html
@@ -90,12 +90,11 @@
             <a href="./index.html" class="menu-link-breadcrumbles">Главная</a>
             <span class="arrow-menu-breadcrumbles"> </span>
           </li>
+
           <li class="menu-list-breadcrumbles">
-            <a href="#" class="menu-link-breadcrumbles">Экскурсии</a>
-            <span class="arrow-menu-breadcrumbles"></span>
-          </li>
-          <li class="menu-list-breadcrumbles">
-            <a href="#" class="menu-link-breadcrumbles">1-4 класс</a>
+            <a href="./categoryPage.html" class="menu-link-breadcrumbles"
+              >1-4 класс</a
+            >
             <span class="arrow-menu-breadcrumbles"></span>
           </li>
           <li class="menu-list-breadcrumbles">
